proxy/traefik/errors.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: errors
  namespace: traefik
spec:
  errors:
    status:
      - "502-503"
    service:
      name: maintenance
      namespace: default
      port: 3000
