proxy/traefik/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: real-ip-x-fwd-for
  namespace: traefik
spec:
  plugin:
    header-transform:
      Rules:
        - Header: X-Forwarded-For
          Name: Header set
          Rule: null
          Type: Set
          HeaderPrefix: "^"
          Sep: ", "
          Values:
            - ^X-Forwarded-For
            - ^X-Real-Ip

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cloudflare-whitelist
  namespace: traefik
spec:
  ipWhiteList:
    ipStrategy:
      depth: 1
    sourceRange:
      - 103.21.244.0/22
      - 103.22.200.0/22
      - 103.31.4.0/22
      - 104.16.0.0/13
      - 104.24.0.0/14
      - 108.162.192.0/18
      - 131.0.72.0/22
      - 141.101.64.0/18
      - 162.158.0.0/15
      - 172.64.0.0/13
      - 173.245.48.0/20
      - 188.114.96.0/20
      - 190.93.240.0/20
      - 197.234.240.0/22
      - 198.41.128.0/17
      - 2400:cb00::/32
      - 2606:4700::/32
      - 2803:f800::/32
      - 2405:b500::/32
      - 2405:8100::/32
      - 2a06:98c0::/29
      - 2c0f:f248::/32

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cloudflare-translate-ip
  namespace: traefik
spec:
  plugin:
    traefik-real-ip:
      excludednets:
        - 103.21.244.0/22
        - 103.22.200.0/22
        - 103.31.4.0/22
        - 104.16.0.0/13
        - 104.24.0.0/14
        - 108.162.192.0/18
        - 131.0.72.0/22
        - 141.101.64.0/18
        - 162.158.0.0/15
        - 172.64.0.0/13
        - 173.245.48.0/20
        - 188.114.96.0/20
        - 190.93.240.0/20
        - 197.234.240.0/22
        - 198.41.128.0/17
        - 2400:cb00::/32
        - 2606:4700::/32
        - 2803:f800::/32
        - 2405:b500::/32
        - 2405:8100::/32
        - 2a06:98c0::/29
        - 2c0f:f248::/32

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: network-check
  namespace: traefik
spec:
  circuitBreaker:
    expression: NetworkErrorRatio() > 0.30 && LatencyAtQuantileMS(50.0) > 100

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: middleware-chain
  namespace: traefik
spec:
  chain:
    middlewares:
      - name: real-ip-x-fwd-for
      - name: cloudflare-whitelist
      - name: cloudflare-translate-ip
