proxy/traefik/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  namespace: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-controller

      volumes:
        - name: traefik-conf
          configMap:
            name: traefik-conf
        - name: traefik-certs
          secret:
            secretName: cf-main

      containers:
        - name: traefik
          image: traefik:v2.5.2
          volumeMounts:
            - mountPath: /etc/traefik/ssl
              name: traefik-certs
            - mountPath: /etc/traefik
              name: traefik-conf
          livenessProbe:
            httpGet:
              path: /ping
              port: 8083
            initialDelaySeconds: 3
            periodSeconds: 3
          ports:
            - name: https
              containerPort: 443
            - name: metrics
              containerPort: 8082
            - name: ping
              containerPort: 8083
