proxy/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 443
      name: https
      targetPort: 443
    - protocol: TCP
      port: 8082
      name: metrics
      targetPort: 8082
    - protocol: TCP
      port: 8083
      name: ping
      targetPort: 8083
  externalTrafficPolicy: Local
  externalIPs:
    - PROXY.EXTERNAL.IP.HERE
